# feeder_yijinjing_ctp

./: .gitignore  CMakeLists.txt  Dockerfile
conf/: config.ini
doc/: ChangeLog.md  readme.txt
lib/libctp-6.3.16/lib/: WinDataCollect.lib
src/ctp_feeder/: config.cc  config.h  ctp.h  ctp_market_spi.cc  ctp_market_spi.h  ctp_server.cc  ctp_server.h  ctp_support.cc  ctp_support.h  ctp_trade_spi.cc  ctp_trade_spi.h  define.h  instrument_field.h  main.cc  singleton.h
src/reader/: reader.cc
vs2019/: feeder_yijinjing_ctp.sln
vs2019/feeder_tap/: feeder_yijinjing_ctp.vcxproj  feeder_yijinjing_ctp.vcxproj.filters
